# pdm

./: .env  .gitignore  Guia_Desenvolvimento_Projeto_Final (1).docx  Makefile  README.md  analysis.ipynb  binance.py  config.py  consumer.py  docker-compose.yml  ex9.md  experiment.sh  processor.py  requirements.txt  run.sh
almondcli/: Dockerfile
docs/: 1-basic-commands.md
exercises/: 01-intro-commands.md  02-sys-processes-performance.md  03-data-models.md  (+17 more)
finalproject/20251/g2/: .gitignore  Dockerfile  README-CLUSTER.md  README-provisorio.md  README.md  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  test-cluster.sh
finalproject/20251/g2/datasample/: ru_sample.json
finalproject/20251/g2/misc/metrics/: .gitkeep
finalproject/20251/g2/misc/results/: .gitkeep
finalproject/20251/g2/src/: __init__.py  config.py  data_analysis.py  experiments.py  logging_config.py  main.py  spark_measure_utils.py
finalproject/20261/g6/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
finalproject/20261/g6/datasample/: orkut_0p1pct.meta.json  orkut_0p1pct.npz
finalproject/20261/g6/misc/: Makefile
finalproject/20261/g6/misc/docs/: DOCUMENTACAO_PROJETO.md
finalproject/20261/g6/misc/tests/: conftest.py
finalproject/20261/g6/misc/tests/fixtures/: toy_graphs.py
finalproject/20261/g6/misc/tests/integration/: conftest.py  dataset.py  test_load_graph_orkut.py  test_lpa_orkut.py  test_smoke_tiny.py
finalproject/20261/g6/misc/tests/unit/: test_benchmark_paths.py  test_benchmark_runner.py  test_benchmark_seeds.py  test_cli.py  test_config.py  test_dask_cluster_mode.py  test_edge_cases.py  test_fraction_artifacts.py  test_fractions.py  test_graph_artifact.py  test_graph_core.py  test_graph_edges.py  test_graph_labels.py  test_lpa.py  test_lpa_seed_determinism.py  test_memory_estimate.py  test_metrics.py  test_partitions.py  test_preprocess.py  test_ray_cluster_mode.py  test_report.py  test_vm_memory.py
finalproject/20261/g6/src/: config.py
finalproject/20261/g6/src/benchmark/: __init__.py  memory_estimate.py  metrics.py  partitions.py  paths.py  report.py  report_sections.py  run_log.py  runner.py  seeds.py  vm_memory.py
finalproject/20261/g6/src/cli/: main.py
finalproject/20261/g6/src/dask_impl/: __init__.py  lpa_dask.py
finalproject/20261/g6/src/graph/: __init__.py  graph.py
finalproject/20261/g6/src/lpa_core/: __init__.py  distributed.py  lpa.py  worker_memory.py
finalproject/20261/g6/src/preprocessing/: __init__.py  fraction_artifacts.py  fractions.py  graph_artifact.py  load.py  load_graph.py  load_snap.py  sample_lcc.py
finalproject/20261/g6/src/ray_impl/: __init__.py  lpa_ray.py
(+367 files in other folders)
